Bug 189919 - SharedBuffer should have an equality test
Summary: SharedBuffer should have an equality test
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2018-09-24 10:30 PDT by Jer Noble
Modified: 2018-09-24 16:49 PDT (History)
4 users (show)

See Also:


Attachments
Patch (4.81 KB, patch)
2018-09-24 10:34 PDT, Jer Noble
no flags Details | Formatted Diff | Diff
Patch (5.62 KB, patch)
2018-09-24 12:24 PDT, Jer Noble
no flags Details | Formatted Diff | Diff
Patch for landing (5.41 KB, patch)
2018-09-24 14:16 PDT, Jer Noble
no flags Details | Formatted Diff | Diff
Patch for landing (5.40 KB, patch)
2018-09-24 14:52 PDT, Jer Noble
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2018-09-24 10:30:53 PDT
SharedBuffer should have an equality test
Comment 1 Jer Noble 2018-09-24 10:34:09 PDT
Created attachment 350652 [details]
Patch
Comment 2 Jer Noble 2018-09-24 12:24:15 PDT
Created attachment 350663 [details]
Patch
Comment 3 Alex Christensen 2018-09-24 12:38:14 PDT
Comment on attachment 350663 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=350663&action=review

> Source/WebCore/platform/SharedBuffer.h:176
> +    bool isEqualTo(const SharedBuffer&) const;

bool operator==(const SharedBuffer&) const
Comment 4 Jer Noble 2018-09-24 14:16:50 PDT
Created attachment 350684 [details]
Patch for landing
Comment 5 EWS Watchlist 2018-09-24 14:18:43 PDT
Attachment 350684 [details] did not pass style-queue:


ERROR: Source/WebCore/platform/SharedBuffer.h:177:  Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line.  [build/webcore_export] [4]
Total errors found: 1 in 5 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 6 Alex Christensen 2018-09-24 14:49:10 PDT
Comment on attachment 350684 [details]
Patch for landing

View in context: https://bugs.webkit.org/attachment.cgi?id=350684&action=review

> Source/WebCore/platform/SharedBuffer.h:177
> +    bool operator!=(const SharedBuffer& right) const { return !operator==(right); }

The name "right" doesn't make sense here.  I would've written this like this:
bool operator!=(const SharedBuffer& other) const { return !(*this == other); }
Comment 7 Jer Noble 2018-09-24 14:52:19 PDT
Created attachment 350695 [details]
Patch for landing
Comment 8 WebKit Commit Bot 2018-09-24 15:30:59 PDT
The commit-queue encountered the following flaky tests while processing attachment 350695 [details]:

The commit-queue is continuing to process your patch.
Comment 9 WebKit Commit Bot 2018-09-24 15:31:09 PDT
The commit-queue encountered the following flaky tests while processing attachment 350695 [details]:

fetch/fetch-worker-crash.html bug 187257 (author: youennf@gmail.com)
The commit-queue is continuing to process your patch.
Comment 10 WebKit Commit Bot 2018-09-24 16:48:58 PDT
Comment on attachment 350695 [details]
Patch for landing

Clearing flags on attachment: 350695

Committed r236443: <https://trac.webkit.org/changeset/236443>
Comment 11 WebKit Commit Bot 2018-09-24 16:49:00 PDT
All reviewed patches have been landed.  Closing bug.
Comment 12 Radar WebKit Bug Importer 2018-09-24 16:49:25 PDT
<rdar://problem/44745768>