SharedBuffer should have an equality test https://bugs.webkit.org/show_bug.cgi?id=189919

Reviewed by Alex Christensen.

Source/WebCore:

Test: TestWebKitAPI SharedBuffer.isEqualTo.

* platform/SharedBuffer.cpp:
* platform/SharedBuffer.h:
(WebCore::operator==):
(WebCore::operator!=):

Tools:

* TestWebKitAPI/Tests/WebCore/SharedBuffer.cpp:
(TestWebKitAPI::TEST_F):


Canonical link: https://commits.webkit.org/204895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236443 268f45cc-cd09-0410-ab3c-d52691b4dbfc